--- a/Index.html
+++ b/Index.html
@@ -125,7 +125,7 @@
                         <div class="paragraph py-4 w-75">
                             <p class="para">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Error rerum iure obcaecati vel
-                                possimus officia maiores perferendis ut! Quos, perspiciatis.
+                                possimus.
                             </p>
                             <p class="para">
                                 It is a long established fact that a reader will be distracted by the readable content
